// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SociowgramBackground /> renders ok for image 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Background
    allowHighlighting={false}
    allowPositioning={false}
    canCreateEdge={false}
    canHighlight={false}
    concentricCircles={0}
    createEdge="bar"
    displayEdges={Array []}
    highlightAttributes={Object {}}
    image="map.png"
    layoutVariable="foo"
    nodeBinSortOrder={Object {}}
    selectMode=""
    skewedTowardCenter={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Connect(withState(lifecycle(mapProps(BackgroundImage))))
        className="sociogram-background__image"
        url="map.png"
      />,
      "className": "sociogram-background",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "className": "sociogram-background__image",
        "url": "map.png",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Connect(withState(lifecycle(mapProps(BackgroundImage))))
          className="sociogram-background__image"
          url="map.png"
        />,
        "className": "sociogram-background",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "sociogram-background__image",
          "url": "map.png",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SociowgramBackground /> renders ok for radar 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Background
    allowHighlighting={false}
    allowPositioning={false}
    canCreateEdge={false}
    canHighlight={false}
    concentricCircles={4}
    createEdge="bar"
    displayEdges={Array []}
    highlightAttributes={Object {}}
    image={null}
    layoutVariable="foo"
    nodeBinSortOrder={Object {}}
    selectMode=""
    skewedTowardCenter={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Radar
        n={4}
        skewed={true}
      />,
      "className": "sociogram-background",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "n": 4,
        "skewed": true,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Radar
          n={4}
          skewed={true}
        />,
        "className": "sociogram-background",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "n": 4,
          "skewed": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
